# SimplePhysicsEngineOpenGL

./: CMakeLists.txt  make.mk  make.mk~  physics
src/physics/: body.hpp  collisions.cpp  collisions.cpp~  collisions.hpp  main.cpp  physics.cpp  physics.cpp~  physics.hpp  planebody.cpp  planebody.hpp  spherebody.cpp  spherebody.cpp~  spherebody.hpp  spring.cpp  spring.hpp  trianglebody.cpp  trianglebody.hpp
